Add bolded text

--- a/frontend/src/styles/theme.css
+++ b/frontend/src/styles/theme.css
@@ -5,6 +5,10 @@
         @apply text-[65px] font-normal leading-[120%];
     }
 
+    .heading1-bold {
+        @apply text-[65px] font-bold leading-[120%];
+    }
+
     .heading2 {
         @apply text-[31px] font-normal leading-[120%];
     }
@@ -15,6 +19,10 @@
 
     .heading4 {
         @apply text-[20px] font-normal leading-[120%];
+    }
+
+    .heading4-bold {
+        @apply text-[20px] font-bold leading-[120%];
     }
 
     .button {
