--- a/frontend/src/styles/theme.css
+++ b/frontend/src/styles/theme.css
@@ -17,6 +17,10 @@
         @apply text-[20px] font-normal leading-[120%];
     }
 
+    .heading4-bold {
+        @apply text-[20px] font-bold leading-[120%];
+    }
+
     .button {
         @apply text-[16px] font-normal leading-[120%];
     }
