--- a/frontend/src/styles/theme.css
+++ b/frontend/src/styles/theme.css
@@ -13,6 +13,10 @@
         @apply text-[31px] font-normal leading-[120%];
     }
 
+    .heading2-bold {
+        @apply text-[31px] font-bold leading-[120%];
+    }
+
     .heading3 {
         @apply text-[24px] font-normal leading-[120%];
     }
